--- a/mobile/package.json
+++ b/mobile/package.json
@@ -17,13 +17,15 @@
     "expo-status-bar": "~1.4.4",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.71.8"
+    "react-native": "0.71.8",
+    "react-native-svg": "13.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@rocketseat/eslint-config": "^1.2.0",
     "eslint": "^8.40.0",
     "prettier-plugin-tailwindcss": "^0.3.0",
+    "react-native-svg-transformer": "^1.0.0",
     "tailwindcss": "^3.3.2"
   },
   "private": true
