--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -1,5 +1,14 @@
 {
   "extends": [
     "@rocketseat/eslint-config/node"
-  ]
+  ],
+
+  "rules": {
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "crlf"
+      }
+    ]
+  }
 }
