github OAuth and github code

--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,6 @@
+# Database
 DATABASE_URL="file:./dev.db"
+
+# Github
+GITHUB_CLIENT_ID="2ebdb69d57062449fca6"
+GITHUB_CLIENT_SECRET="8fd1ef764e92211fb4f7f7ea2f144667de73de18"
