--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,10 @@
 # Database
 DATABASE_URL="file:./dev.db"
 
-# Github
-GITHUB_CLIENT_ID="2ebdb69d57062449fca6"
-GITHUB_CLIENT_SECRET="8fd1ef764e92211fb4f7f7ea2f144667de73de18"
+# Github (Web)
+# GITHUB_CLIENT_ID="2ebdb69d57062449fca6"
+# GITHUB_CLIENT_SECRET="8fd1ef764e92211fb4f7f7ea2f144667de73de18"
+
+# Github (Mobile)
+GITHUB_CLIENT_ID="106c81f91648440ab16b"
+GITHUB_CLIENT_SECRET="546414a0b8123c19a3117ea036909e0e3728672b"
