--- a/mobile/package.json
+++ b/mobile/package.json
@@ -21,7 +21,8 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.71.8",
-    "react-native-svg": "13.4.0"
+    "react-native-svg": "13.4.0",
+    "expo-secure-store": "~12.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
